--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -45,6 +47,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+!layers/analyzer/nodejs/*
 
 # TypeScript v1 declaration files
 typings/
